--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Időjárás Előrejelzés Táblázattal</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body onload="GenerateBase()">
   
-  <div >
+  <div class="container">
     <h1>Időjárás Előrejelző</h1>
 
-    <table >
-      <thead >
+    <table class="table table-striped table-light table-hover">
+      <thead class="thead-light">
         <tr>
           <th>Nap</th>
           <th>Időjárás</th>
@@ -22,7 +24,7 @@
       </tbody>
     </table>
 
-    <button class="" onclick="ForeCast()">Következő nap előrejelzése</button>
+    <button class="btn btn-lg btn-primary my-3" onclick="ForeCast()">Következő nap előrejelzése</button>
       <div>
         <h2 class="larger2">Várható időjárás</h2>
         <h1 id="icon"><i class="bi bi-clouds"></i></h1>
