--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -9,10 +9,21 @@
 </head>
 <body onload="GenerateBase()">
   
+  
+      <div>
+        <h2 class="larger2">Várható időjárás</h2>
+        <h1 id="icon"><i class="bi bi-clouds"></i></h1>
+        <p id="forecast" class="larger"><strong>Időjárás:</strong>Napos</p>
+        <p id="temp" class="larger"><strong>Hőmérséklet:</strong>50C</p>
+        <p id="windspeed" class="larger"><strong>Szélsebesség:</strong>50Km</p>
+      </div>
+    <div class="forecast" id="forecastDisplay"></div>
+  </div>
+<button class="btn btn-lg btn-primary my-3" onclick="ForeCast()">Következő nap előrejelzése</button>
   <div class="container">
     <h1>Időjárás Előrejelző</h1>
 
-    <table class="table table-striped table-light table-hover">
+    <table class="table table-striped table-light table-hover tableborder">
       <thead class="thead-light">
         <tr>
           <th>Nap</th>
@@ -25,16 +36,7 @@
       </tbody>
     </table>
 
-    <button class="btn btn-lg btn-primary my-3" onclick="ForeCast()">Következő nap előrejelzése</button>
-      <div>
-        <h2 class="larger2">Várható időjárás</h2>
-        <h1 id="icon"><i class="bi bi-clouds"></i></h1>
-        <p id="forecast" class="larger"><strong>Időjárás:</strong>Napos</p>
-        <p id="temp" class="larger"><strong>Hőmérséklet:</strong>50C</p>
-        <p id="windspeed" class="larger"><strong>Szélsebesség:</strong>50Km</p>
-      </div>
-    <div class="forecast" id="forecastDisplay"></div>
-  </div>
+    
 
   <script src="./elorejelzes.js"></script>
 
